--- a/_posts/bible-studies/2023-10-15-Hebrews.md
+++ b/_posts/bible-studies/2023-10-15-Hebrews.md
@@ -25,3 +25,6 @@ comments_locked: false
 ##  [<u>Hebrews 1:1-14</u>]({{ site.url }}{% post_url bible-studies/Hebrews/2023-10-15-Hebrews-01-v01-14 %})
 
 Hebrews 1 emphasizes the superiority of Jesus Christ over the angels. It affirms that God has spoken to humanity through His Son, who is the heir of all things and the Creator of the universe. Jesus is depicted as the radiance of God's glory and the exact representation of His nature. In this way, Hebrews 1 introduces the central theme of the book, which is the supremacy of Jesus and the New Covenant.
+##  [<u>Hebrews 2:1-18</u>]({{ site.url }}{% post_url bible-studies/Hebrews/2023-10-15-Hebrews-02-v01-18 %})
+
+The book of Hebrews, chapter 2, emphasizes the importance of paying close attention to the message of salvation brought by Jesus. It highlights Jesus' superiority to angels and how, as the perfect Son of God, He became a human to identify with humanity and lead them to salvation. The chapter warns against neglecting this great salvation and encourages believers to remain faithful and not drift away from their faith. It also stresses Jesus' role as the pioneer of salvation and the high priest who intercedes for believers. Ultimately, Hebrews 2 underscores the significance of holding firm to the message of salvation and not taking it lightly.
