--- a/_posts/bible-studies/Hebrews/2023-10-15-Hebrews-01-v01-14.md
+++ b/_posts/bible-studies/Hebrews/2023-10-15-Hebrews-01-v01-14.md
@@ -43,10 +43,7 @@ In the forthcoming chapters, we will discover what God intends to communicate to
 <i>"<sup>6</sup>A man came, sent from God, whose name was John.  <sup>7</sup>He came as a <strong>witness to testify about the light</strong>, so that everyone might believe through him.  <sup>8</sup>He himself was not the light, but he came to testify about the light."</i></span> (John 1:6-8)
 -->
 
-<!--
-[(<em>Bài kế: John 1:33</em>)]({{ site.url }}{% post_url bible-studies/John/2023-07-02-John-01-v33 %})
--->
-
+[(<em>Bài kế: Hebrews 2:1-18</em>)]({{ site.url }}{% post_url bible-studies/Hebrews/2023-10-15-Hebrews-02-v01-18 %})
 
 {% include bible-study/bible-study-footer %}
 
