--- a/_posts/bible-studies-Viet/2023-10-15-Hebrews.md
+++ b/_posts/bible-studies-Viet/2023-10-15-Hebrews.md
@@ -28,3 +28,7 @@ Hê-bơ-rơ 1 nhấn mạnh sự siêu việt của Đấng Christ so với các
 ##  [<u>Hebrews 2:1-18</u>]({{ site.url }}{% post_url bible-studies-Viet/Hebrews/2023-10-15-Hebrews-02-v01-18-Viet %})
 
 Sách Hê-bơ-rơ, chương 2, nhấn mạnh tầm quan trọng của việc chú ý đến thông điệp cứu rỗi được đưa ra bởi Chúa Giê-su. Nó tôn vinh sự vượt trội của Chúa Giê-su so với các thiên sứ và sự Chúa Giê-su, là Con Chúa hoàn hảo, đã trở thành con người để đồng cảm với nhân loại và dẫn họ đến sự cứu rỗi. Chương này cảnh báo về việc bỏ qua cơ hội cứu rỗi tuyệt vời này và khuyến khích những người tin Chúa duy trì và không lìa xa đức tin mà họ đã nhận lãnh. Nó cũng nhấn mạnh vai trò của Chúa Giê-su như Đấng tiên phong trong sự cứu rỗi và là Đấng cầu thay cho những kẻ tin Ngài. Cuối cùng, Hê-bơ-rơ 2 làm nổi bật tầm quan trọng của việc vững tin vào thông điệp cứu rỗi và chớ xem nhẹ nó.
+
+##  [<u>Hebrews 3:1-19</u>]({{ site.url }}{% post_url bible-studies-Viet/Hebrews/2023-10-15-Hebrews-03-v01-19-Viet %})
+
+Hê-bơ-rơ 3 nhấn mạnh quyền lực và sự vượt trội của Chúa Giê-su như là Thầy Tế Lễ tối cao và kêu gọi tín hữu duy trì đức tin và tránh những sai lầm của sự không tin như người Do Thái đã mắc phải khi ở trong đồng vắng. Nó nhấn mạnh tầm quan trọng của đức tin và sự kiên nhẫn trong việc bước vào sự an nghỉ của Chúa mà đạt được sự cứu rỗi.
