--- a/_posts/bible-studies/2023-10-15-Hebrews.md
+++ b/_posts/bible-studies/2023-10-15-Hebrews.md
@@ -28,3 +28,7 @@ Hebrews 1 emphasizes the superiority of Jesus Christ over the angels. It affirms
 ##  [<u>Hebrews 2:1-18</u>]({{ site.url }}{% post_url bible-studies/Hebrews/2023-10-15-Hebrews-02-v01-18 %})
 
 The book of Hebrews, chapter 2, emphasizes the importance of paying close attention to the message of salvation brought by Jesus. It highlights Jesus' superiority to angels and how, as the perfect Son of God, He became a human to identify with humanity and lead them to salvation. The chapter warns against neglecting this great salvation and encourages believers to remain faithful and not drift away from their faith. It also stresses Jesus' role as the pioneer of salvation and the high priest who intercedes for believers. Ultimately, Hebrews 2 underscores the significance of holding firm to the message of salvation and not taking it lightly.
+
+##  [<u>Hebrews 3:1-19</u>]({{ site.url }}{% post_url bible-studies/Hebrews/2023-10-15-Hebrews-03-v01-19 %})
+
+Hebrews 3 highlights the authority and superiority of Jesus as the High Priest and calls on believers to remain faithful and avoid the mistakes of unbelief made by the Israelites in the wilderness. It emphasizes the significance of faith and perseverance in entering God's rest and attaining salvation.
