--- a/_posts/bible-studies-Viet/2023-10-15-Hebrews.md
+++ b/_posts/bible-studies-Viet/2023-10-15-Hebrews.md
@@ -36,3 +36,7 @@ Hê-bơ-rơ 3 nhấn mạnh quyền lực và sự vượt trội của Chúa Gi
 ##  [<u>Hebrews 4:1-16</u>]({{ site.url }}{% post_url bible-studies-Viet/Hebrews/2023-10-15-Hebrews-04-v01-16-Viet %})
 
 Hê-bơ-rơ 4 nhấn mạnh sự quan trọng của việc bước vào sự an nghỉ của Chúa nhờ đức tin trong Đấng Christ. Nó nhấn mạnh tầm quan trọng của sự an nghỉ Chúa ban cho những kẻ có lòng tin, tương tự như sự nghỉ ngơi của Ngài sau buổi sáng thế. Chương này cảnh báo về sự không vâng lời và thiếu đức tin, so sánh với những điểm tương đồng với người Do Thái trong sa mạc, họ đã không thể bước vào Đất Hứa do thiếu đức tin. Hê-bơ-rơ 4 cũng làm nổi bật Chúa Giê-su như Thầy Tế Lễ Thượng Phẩm tối cao, cảm thông với sự yếu đuối của những người tin theo Ngài, và khuyến khích họ mạnh dạn đến gần Ngai Ân Điển để được Ngài giúp đỡ trong khi cần thiết.
+
+##  [<u>Hebrews 5:1-14</u>]({{ site.url }}{% post_url bible-studies-Viet/Hebrews/2023-10-15-Hebrews-05-v01-14-Viet %})
+
+Hebrews 5 làm nổi bật vai trò của thầy tế lễ trong Giao Ước Cũ và giới thiệu Đấng Christ như là thầy tế lễ tối cao trong Giao Ước Mới. Chương này nhấn mạnh những phẩm chất mà một thầy tế lễ cần phải có, như sự cảm thông với tín hữu và sự kêu gọi từ Đức Chúa Trời. Chương này cũng giải thích rằng Đấng Christ đã được Đức Chúa Trời ủy nhiệm làm thầy tế lễ theo dòng Melchizedek, vượt qua những giới hạn của thầy tế lễ Lê-vi. Khuyến khích tín đồ phát triển đức tin và sự hiểu biết của họ, chuyển từ sữa sang đồ ăn đặc trong tiến trình tâm linh của họ. Cũng cảnh báo về tình trạng èo uột tâm linh và nhấn mạnh sự quan trọng của việc phát triển đức tin và sự vâng lời theo đúng ý nghĩa của nó.
