--- a/_posts/bible-studies/2023-10-15-Hebrews.md
+++ b/_posts/bible-studies/2023-10-15-Hebrews.md
@@ -36,3 +36,7 @@ Hebrews 3 highlights the authority and superiority of Jesus as the High Priest a
 ##  [<u>Hebrews 4:1-16</u>]({{ site.url }}{% post_url bible-studies/Hebrews/2023-10-15-Hebrews-04-v01-16 %})
 
 Hebrews 4 emphasizes the importance of entering God's rest through faith in Jesus Christ. It underscores the rest that God offers to those who believe, similar to the rest He took after creating the world. The chapter warns against disobedience and unbelief, drawing parallels with the Israelites in the wilderness who failed to enter the Promised Land due to their lack of faith. Hebrews 4 also highlights Jesus as the ultimate high priest who sympathizes with believers' weaknesses and encourages them to approach God's throne with confidence. It encourages the pursuit of God's rest and promises help in times of need.
+
+##  [<u>Hebrews 5:1-14</u>]({{ site.url }}{% post_url bible-studies/Hebrews/2023-10-15-Hebrews-05-v01-14 %})
+
+Hebrews 5 highlights the role of the high priest in the Old Testament and introduces Jesus as the ultimate high priest in the New Covenant. It emphasizes the qualities a high priest should possess, such as empathy and a calling from God. The chapter explains that Jesus was appointed by God as a high priest in the order of Melchizedek, surpassing the limitations of the Levitical priesthood. It encourages believers to mature in their faith and understanding, moving from milk to solid food in their spiritual journey. The chapter also warns against spiritual stagnation and underscores the importance of growing in faith and true obedience.
