--- a/_posts/bible-studies-Viet/2023-10-15-Hebrews.md
+++ b/_posts/bible-studies-Viet/2023-10-15-Hebrews.md
@@ -40,3 +40,11 @@ Hê-bơ-rơ 4 nhấn mạnh sự quan trọng của việc bước vào sự an 
 ##  [<u>Hebrews 5:1-14</u>]({{ site.url }}{% post_url bible-studies-Viet/Hebrews/2023-10-15-Hebrews-05-v01-14-Viet %})
 
 Hebrews 5 làm nổi bật vai trò của thầy tế lễ trong Giao Ước Cũ và giới thiệu Đấng Christ như là thầy tế lễ tối cao trong Giao Ước Mới. Chương này nhấn mạnh những phẩm chất mà một thầy tế lễ cần phải có, như sự cảm thông với tín hữu và sự kêu gọi từ Đức Chúa Trời. Chương này cũng giải thích rằng Đấng Christ đã được Đức Chúa Trời ủy nhiệm làm thầy tế lễ theo dòng Melchizedek, vượt qua những giới hạn của thầy tế lễ Lê-vi. Khuyến khích tín đồ phát triển đức tin và sự hiểu biết của họ, chuyển từ sữa sang đồ ăn đặc trong tiến trình tâm linh của họ. Cũng cảnh báo về tình trạng èo uột tâm linh và nhấn mạnh sự quan trọng của việc phát triển đức tin và sự vâng lời theo đúng ý nghĩa của nó.
+
+##  [<u>Hebrews 6:1-20</u>]({{ site.url }}{% post_url bible-studies-Viet/Hebrews/2023-10-15-Hebrews-06-v01-20-Viet %})
+
+Hê-bơ-rơ 6 đề cập đến khái niệm về sự trưởng thành tâm linh và nguy cơ bị ***"vấp ngã"*** vào giáo điều sai lạc. Khởi đầu bằng cách nhấn mạnh tầm quan trọng của việc vượt qua những điều sơ học và tiến tới sự hiểu biết sâu sắc hơn về chương trình cứu rỗi của Đức Chúa Trời qua đức tin vào Đấng Christ.
+
+Sau đó, chương này đưa ra một cảnh báo về hậu quả nghiêm trọng của việc "***vấp ngã***" đã nói ở trên, tức là việc lìa bỏ niềm tin đã nhận lúc ban đầu, vì như vậy cũng kể như đóng đinh Chúa Giê-su một lần nữa.
+
+Hê-bơ-rơ 6 cũng mang lại sự an ủi cho những người tin bằng cách nhấn mạnh bản chất không thay đổi và sự thành tín của Đức Chúa Trời trong việc thực hiện Lời hứa của Ngài. Nó đề cập đến vai trò của Đấng Christ làm thầy tế lễ thượng phẩm và là Đấng trung bảo giữa Đức Chúa Trời và loài người, đảm bảo hy vọng cho những người đặt niềm tin vào Ngài.
