--- a/_posts/bible-studies-Viet/John-Epistles/2022-09-15-1John-ch5-v14-21-Viet.md
+++ b/_posts/bible-studies-Viet/John-Epistles/2022-09-15-1John-ch5-v14-21-Viet.md
@@ -26,8 +26,7 @@ comments_locked: false
 <p>
 <img alt src="http://vacsf.org/assets/images/1-Giang-teaser.jpg" style="border: 0px none; margin: 7px 15px 0px 0px; max-width: 100%; height: 148px; padding: 0px; float: left;">
 <i><span style="color: rgb(159, 29, 33);">
-    “<sup>14</sup>Nầy là điều chúng ta dạn dĩ ở trước mặt Chúa, <strong>nếu chúng ta theo ý muốn Ngài mà cầu xin việc gì, thì Ngài nghe chúng ta</strong>. <sup>15</sup>Nếu chúng ta biết <strong>không cứ mình xin điều gì</strong>, Ngài cũng nghe chúng ta, thì chúng ta biết mình đã nhận lãnh điều mình xin Ngài."</span></i> (1 John 5:14-15)<br />
-    Những người cổ động cho tin lành tuyên-bố-vầ-đòi-hỏi (name-it-and-claim-it gospel) thì thường lạm dụng mệnh đề <strong><i>"không cứ mình xin điều gì"</i></strong> trong khi họ bỏ qua mệnh đề <strong><i>"theo ý muốn Ngài"</i></strong>. Rồi để biện hộ cho chủ trương đó họ dạy rằng ý Chúa là mọi người đều khỏe mạnh và thịnh vượng.
+    “<sup>14</sup>Nầy là điều chúng ta dạn dĩ ở trước mặt Chúa, <strong>nếu chúng ta theo ý muốn Ngài mà cầu xin việc gì, thì Ngài nghe chúng ta</strong>. <sup>15</sup>Nếu chúng ta biết <strong>không cứ mình xin điều gì</strong>, Ngài cũng nghe chúng ta, thì chúng ta biết mình đã nhận lãnh điều mình xin Ngài."</span></i> (1 John 5:14-15)
 </p>
 </div>
 
