--- a/_posts/bible-studies-Viet/John/2023-07-02-John-04-v35-54-Viet.md
+++ b/_posts/bible-studies-Viet/John/2023-07-02-John-04-v35-54-Viet.md
@@ -64,11 +64,9 @@ Tiên tri thường được Chúa dùng để truyền đạt ý mình cho dân
 <span style="color: rgb(159, 29, 33);">
 <i><sup>46</sup> Vậy, Ngài lại đến thành Ca-na, trong xứ Ga-li-lê, là nơi Ngài đã hóa nước thành rượu. Nguyên ở tại thành Ca-bê-na-um, có một quan thị vệ kia, con trai người mắc bịnh.  <sup>47</sup> Quan đó nghe Ðức Chúa Jêsus đã từ xứ Giu-đê đến xứ Ga-li-lê, bèn tìm đến và xin Ngài xuống đặng chữa cho con mình gần chết.  <sup>48</sup> Ðức Chúa Jêsus phán rằng: <strong>Nếu các ngươi không thấy phép lạ và điềm lạ, thì các ngươi chẳng tin!</strong>  <sup>49</sup> Quan thị vệ trả lời rằng: Lạy Chúa, xin Chúa xuống trước khi con tôi chưa chết!  <sup>50</sup> Ðức Chúa Jêsus phán rằng: Hãy đi, con của ngươi sống. <strong>Người đó tin lời Ðức Chúa Jêsus đã phán cho mình, bèn đi</strong>.  <sup>51</sup> Người đang đi dọc đàng, các đầy tớ người đến đón mà rằng: Con trai chủ sống.  <sup>52</sup> Người bèn hỏi họ con trai mình đã thấy khá nhằm giờ nào. Họ trả lời rằng: bữa qua, hồi giờ thứ bảy, cơn rét lui khỏi.  <sup>53</sup> Người cha nhận biết rằng ấy là chính giờ đó Ðức Chúa Jêsus đã phán cùng mình rằng: Con của ngươi sống; thì người với cả nhà đều tin.  <sup>54</sup> Ấy là phép lạ thứ hai mà Ðức Chúa Jêsus đã làm, khi Ngài từ xứ Giu-đê trở về xứ Ga-li-lê.</i></span> (John 4:46-54)
 
-Những người theo phúc âm khỏe mạnh và thịnh vượng nhấn mạnh rằng để bày tỏ đức tin, bạn phải mạnh dạn tuyên bố (name) và đòi hỏi (claim) từ Chúa sự mình muốn được chữa lành. Họ khuyên chúng ta tránh dùng những cụm từ như  "ví bằng Chúa muốn" trong lời cầu nguyện của mình. Có khi họ còn gián tiếp thúc giục tín hữu đừng cầu xin những điều mình muốn, nhưng hãy kể tên và tuyên bố trên những điều đó. Thay vào đó, họ nên: kể ra và tuyên bố chủ quyền. Câu kinh thánh nhắc đến ở trên, ***"Người đó tin lời Ðức Chúa Jêsus đã phán cho mình, bèn đi,"*** đôi khi được họ dùng để bênh vực tín lý đó.
-
 Khi Chúa Giê-su phán, ***"Nếu các ngươi không thấy phép lạ và điềm lạ, thì các ngươi chẳng tin!,"*** Ngài đang ám chỉ niềm tin của dân sự nơi Ngài lả Cứu Chúa cho tội lỗi của họ. Không phải Ngài đang thử họ xem họ có tin Ngài có thể làm được những phép lạ, vì nhiều người đã chứng kiến phép lạ Ngài làm mà cũng chẳng tin. Nhưng Ngài đang tìm những kẻ đến với niềm tin trong Ngài mặc dù không hề được chứng kiến một phép lạ.
 
-Là người tin Chúa, chúng ta tin và vững lòng nắm chặt lời Chúa đã hứa là Chúa Giê-su chết vì tội lỗi chúng ta. Thế nhưng, điều chúng ta không biết chắc là chương trình của Chúa cho mình trong cuộc sống này, nhất là về sức khỏe và tài chánh.
+Là người tin Chúa, chúng ta tin và vững lòng nắm chặt lời Chúa đã hứa là Chúa Giê-su chết vì tội lỗi chúng ta.
 
 [(<em>Bài kế: John 5:1-47</em>)]({{ site.url }}{% post_url bible-studies-Viet/John/2023-07-02-John-05-v01-47-Viet %})
 
