--- a/_posts/bible-studies-Viet/Romans/2022-11-13-Romans-08-v14-23-Viet.md
+++ b/_posts/bible-studies-Viet/Romans/2022-11-13-Romans-08-v14-23-Viet.md
@@ -67,8 +67,6 @@ Phương pháp này có tin cậy được không? Bạn có nên tin cậy vào
 <span style="color: rgb(159, 29, 33);">
 <i>"<sup>17</sup>Lại nếu chúng ta là con cái, thì cũng là kẻ kế tự: kẻ kế tự Ðức Chúa Trời và là kẻ đồng kế tự với Ðấng Christ, miễn chúng ta đều <strong>chịu đau đớn với Ngài</strong>, hầu cho cũng được vinh hiển với Ngài.  <sup>18</sup>Vả, tôi tưởng rằng những <strong>sự đau đớn bây giờ</strong> chẳng đáng so sánh với <strong>sự vinh hiển hầu đến</strong>, là sự sẽ được bày ra trong chúng ta.</i></span> (Romans 8:17-18)
 
-Nhiều tín hữu tin rằng khi đến với niềm tin trong Chúa thì họ phải được hưởng một đời sống phước hạnh an lành. Điều này cho thấy lý do tại sao những nhà thờ nhấn mạnh về tín lý khỏe mạnh và thịnh vượng lại hấp dẫn nhiều người đến nghe và làm giàu cho những người trong hàng ngũ lãnh đạo. Điều đáng buồn là tín lý đó không nhìn nhận rằng những hoạn nạn hiện thời cũng có thể xảy đến cho người tín hữu chân chính. Nhưng Chúa Giê-su đã dạy chúng ta về điều này khi Ngài phán, *"Con cáo có hang, chim trời có ổ; song Con người không có chỗ mà gối đầu"* (Matthew 8:20). Lời phán này kín đáo nhắc nhở chúng ta rằng người đi theo Chúa có thể gặp những thử thách gian nan.
-
 Để nâng đỡ tinh thần những người đang trải qua hoạn nạn trong hiện tại, Phao-lô nhắc nhở chúng ta về một *"sự vinh hiển hầu đến"* để chúng ta đừng ngã lòng.
 
 Nhìn theo bối cảnh của câu 17 chúng ta sẽ hiểu rõ ý chính của sự *"chịu đau đớn với Ngài."*. Tuy nhiên, chúng ta cũng cần ghi nhận rằng có một số người vì hiểu sai ý nghĩa của nó và làm hại chính mình và người mình có ảnh hưởng trên họ. Rốt cuộc họ tìm cách đạt được sự công bình bằng chính nỗ lực của mình hơn là cậy vào ân điển Chúa.
@@ -80,8 +78,7 @@ Nhìn theo bối cảnh của câu 17 chúng ta sẽ hiểu rõ ý chính của 
 
 Sự *"hư không"* và sự *"hư nát"* được thể hiện qua những dạng thức như chết chóc, bệnh tật, chiến tranh, và các tai vạ khác cộng vào với những khổ đau trong đời sống. Đó chính là lý do khiến muôn vật từ buổi sáng thế cho đến ngày nay cứ than thở và chịu khó nhọc.
 
-Mặc dầu chúng ta đã được tiếp nhận vào gia đình của Chúa bởi đức tin nơi Đấng Christ, sự *"cứu chuộc thân thể"* chỉ thực sự xảy đến trong ngày Đấng Christ trở lại sau tiếng kèn chót (1 Cor 15:52). Đây là lúc mọi bệnh tật sẽ không còn nữa. Điều này nhấn mạnh sự tương phản giữa đức tin của chúng ta và của những người tin vào tin lành khỏe mạnh và thịnh vượng (the health-and-wealth gospel), là họ cổ động ý tưởng rằng chúng ta phải từng trải sự *"tự do vinh hiển"* của sự được chữa lành mọi bệnh tật ngay trong thời hiện tại. Tuy nhiên, khăng khăng giữ lấy sự mong đợi đó có thể ảnh hưởng tai hại đến đức tin, nhất là nếu người đang trải qua giai đoạn khó khăn nhất của hoạn nạn và bệnh tật mà không nhận được điều mình đang cầu xin.
-
+Mặc dầu chúng ta đã được tiếp nhận vào gia đình của Chúa bởi đức tin nơi Đấng Christ, sự *"cứu chuộc thân thể"* chỉ thực sự xảy đến trong ngày Đấng Christ trở lại sau tiếng kèn chót (1 Cor 15:52). Đây là lúc mọi bệnh tật sẽ không còn nữa.
 
 {% include bible-study/bible-study-footer %}
 
