--- a/_posts/bible-studies/John/2023-07-02-John-04-v23-34.md
+++ b/_posts/bible-studies/John/2023-07-02-John-04-v23-34.md
@@ -68,7 +68,7 @@ Let us quote a few related verses for additional context:
 >
 > Like newborn babies, crave pure <strong>spiritual milk</strong>, so that by it you may grow up in your salvation (1 Peter 2:2)
 
-Clearly evident, particularly in John 6:35, is Jesus' emphasis on addressing spiritual hunger and thirst. This underscores the necessity for proponents of the prosperity gospel to critically examine their theological standpoint. Jesus does not make a guarantee that life will be devoid of health or wealth challenges. However, the focal point should be on nourishing oneself with the ***"spiritual milk,"*** which fosters growth in comprehending the depth of salvation found in Christ.
+Clearly evident, particularly in John 6:35, is Jesus' emphasis on addressing spiritual hunger and thirst. The focal point should be on nourishing oneself with the ***"spiritual milk,"*** which fosters growth in comprehending the depth of salvation found in Christ.
 
 If Jesus finds sustenance in fulfilling the divine mission of sacrificing himself on the cross for our sins, leading to our justification before God, then what else can be our nourishment except placing our faith in his redemptive work on our behalf?
 
