--- a/_posts/bible-studies/John/2023-07-02-John-04-v35-54.md
+++ b/_posts/bible-studies/John/2023-07-02-John-04-v35-54.md
@@ -66,11 +66,9 @@ Prophets tend to be used by God to communicate his will to the people.  Usually,
 <span style="color: rgb(159, 29, 33);">
 <i><sup>46</sup> Now he came again to Cana in Galilee where he had made the water wine. In Capernaum there was a certain royal official whose son was sick.  <sup>47</sup> When he heard that Jesus had come back from Judea to Galilee, he went to him and begged him to come down and heal his son, who was about to die.  <sup>48</sup> So Jesus said to him, "<strong>Unless you people see signs and wonders you will never believe!</strong>"  <sup>49</sup> "Sir," the official said to him, "come down before my child dies."  <sup>50</sup> Jesus told him, "Go home; your son will live." <strong>The man believed the word that Jesus spoke to him</strong>, and set off for home.   <sup>51</sup> While he was on his way down, his slaves met him and told him that his son was going to live.  <sup>52</sup> So he asked them the time when his condition began to improve, and they told him, "Yesterday at one o'clock in the afternoon the fever left him."  <sup>53</sup> Then the father realized that it was the very time Jesus had said to him, "Your son will live," and he himself believed along with his entire household.  <sup>54</sup> Jesus did this as his second miraculous sign when he returned from Judea to Galilee.</i></span> (John 4:46-54)
 
-Supporters of the prosperity or health-and-wealth gospel assert that to demonstrate your faith, you should openly declare and assert your desire for healing from God. They advise against including phrases like "if the Lord is willing" in your prayers. In some cases, they may even discourage believers from praying altogether, as praying might imply uncertainty about whether healing or prayer responses will occur. They should instead: name it and claim it. The verse mentioned earlier, ***"The man believed the word that Jesus spoke to him and went on his way,"*** is sometimes cited to support this perspective.
-
 When Jesus stated, ***"Unless you people see signs and wonders, you will never believe,"*** He was alluding to people's belief in Him as the Savior from their sins. He wasn't testing whether they believed in His ability to perform miracles, as many had witnessed His miracles but still did not believe. He sought individuals who could have faith even without having witnessed any miracles.
 
-As Christians, we have faith and can confidently lay claim to God's promise that Jesus died for our sins. However, what remains uncertain is God's plan for our current lives, especially regarding matters of health and wealth.
+As Christians, we have faith and can confidently lay claim to God's promise that Jesus died for our sins.
 
 [(<em>Next study: John 5:1-47</em>)]({{ site.url }}{% post_url bible-studies/John/2023-07-02-John-05-v01-47 %})
 
