--- a/_posts/bible-studies/John/2023-07-02-John-07-v01-53.md
+++ b/_posts/bible-studies/John/2023-07-02-John-07-v01-53.md
@@ -73,7 +73,7 @@ Paul plainly articulated an undeniable truth when he said, *"Flesh and blood can
 <span style="color: rgb(159, 29, 33);">
 <i><sup>37</sup> On the last day of the feast, the greatest day, Jesus stood up and shouted out, "<strong>If anyone is thirsty, let him come to me, and  <sup>38</sup> let the one who believes in me drink. Just as the scripture says, 'From within him will flow rivers of living water</strong>.'"  <sup>39</sup> (Now <strong>he said this about the Spirit, whom those who believed in him were going to receive, for the Spirit had not yet been given, because Jesus was not yet glorified</strong>.)</i></span> (John 7:37-39)
 
-Once more, it's important to understand that Jesus is the sustenance that satisfies your hunger and the source of refreshment for your thirst. It's a valuable lesson for prosperity teachers to glean from this passage that Jesus is not addressing material prosperity.
+Once more, it's important to understand that Jesus is the sustenance that satisfies your hunger and the source of refreshment for your thirst.
 
 They frequently discuss the Holy Spirit, but to them, He often serves as a means to an end, even if that end is veiled in spiritual language. They treat the Holy Spirit as though He were a metaphysical force that can be summoned through mental effort, akin to the force in the Star Wars universe.
 
