--- a/_posts/bible-studies-Viet/2023-10-15-Hebrews.md
+++ b/_posts/bible-studies-Viet/2023-10-15-Hebrews.md
@@ -1,7 +1,7 @@
 ---
 title: "Sách Hê-bơ-rơ"
 headline: "So sánh Tân Ước và Cựu Ước."
-excerpt: "Học sách Hê-bơ-rơ theo từng câu."
+excerpt: "Học sách Hê-bơ-rơ theo từng câu. Tôi muốn thừa nhận và bày tỏ lòng biết ơn đối với Pastor Aaron Budjen của livinggodministries.net đã chia sẻ sự thông hiểu của mình về sự công bình của Đức Chúa Trời và sự khác biệt giữa Giao Ước Cũ và Giao Ước Mới."
 image: 
   feature: Hebrews-Viet.jpg
   teaser: Hebrews-teaser-Viet.jpg
@@ -48,3 +48,11 @@ Hê-bơ-rơ 6 đề cập đến khái niệm về sự trưởng thành tâm li
 Sau đó, chương này đưa ra một cảnh báo về hậu quả nghiêm trọng của việc "***vấp ngã***" đã nói ở trên, tức là việc lìa bỏ niềm tin đã nhận lúc ban đầu, vì như vậy cũng kể như đóng đinh Chúa Giê-su một lần nữa.
 
 Hê-bơ-rơ 6 cũng mang lại sự an ủi cho những người tin bằng cách nhấn mạnh bản chất không thay đổi và sự thành tín của Đức Chúa Trời trong việc thực hiện Lời hứa của Ngài. Nó đề cập đến vai trò của Đấng Christ làm thầy tế lễ thượng phẩm và là Đấng trung bảo giữa Đức Chúa Trời và loài người, đảm bảo hy vọng cho những người đặt niềm tin vào Ngài.
+
+##  [<u>Hebrews 7:1-28</u>]({{ site.url }}{% post_url bible-studies-Viet/Hebrews/2023-10-15-Hebrews-07-v01-28-Viet %})
+
+Hê-bơ-rơ 7 tập trung vào bản tính và ý nghĩa của Melchizedek, một nhân vật bí ẩn trong Kinh Thánh Cựu Ước. Chương này làm nổi bật những đặc điểm độc đáo của Melchizedek, chẳng hạn như việc ông là *"Vua công bình"* và *"Chúa bình an"* mà không có gia phả ghi chép. Chương này nhấn mạnh rằng thậm chí cả Abraham, tổ tiên của người Israel, cũng phải dâng phần mười cho Melchizedek, cho thấy sự ưu việt của ông.
+
+Điểm quan trọng của Hê-bơ-rơ 7 là sự ưu việt của dòng Melchizedek so với  Levi. Nó giải thích rằng Đấng Christ, với tư cách là một thầy tế lễ thượng phẩm theo dòng Melchizedek, vượt trội hơn so với các thầy tế lễ dòng Levi. Sự chuyển đổi này từ dòng Levi sang dòng Melchizedek đánh dấu một sự thay đổi về luật pháp, nhấn mạnh tính vĩnh hằng và ưu việt của Đấng Christ.
+
+Tóm lại, Hê-bơ-rơ 7 làm nổi bật sự quan trọng của Melchizedek và cách Đấng Christ thực hiện vai trò của một thầy tế lễ cả vượt trội và vĩnh cửu, đem lại một giao ước tốt hơn.
