--- a/_posts/bible-studies/2023-10-15-Hebrews.md
+++ b/_posts/bible-studies/2023-10-15-Hebrews.md
@@ -1,7 +1,7 @@
 ---
 title: "Hebrews"
 headline: "The New Covenant vs. the Old Covenant."
-excerpt: "A verse-by-verse study of the book of Hebrews"
+excerpt: "A comprehensive examination of the book of Hebrews, delving into it verse by verse (almost). I want to acknowledge and extend my appreciation to Pastor Aaron Budjen of livinggodministries.net for sharing his insights regarding the righteousness of God and the distinctions between the Old and New Covenants."
 image: 
   feature: Hebrews.jpg
   teaser: Hebrews-teaser.jpg
@@ -48,3 +48,11 @@ Hebrews 6 addresses the concept of spiritual maturity and the danger of falling 
 The chapter then issues a warning about the severe consequences of apostasy, the willful rejection of the faith once embraced. It describes how it is impossible to renew those who have fallen away, as it would require crucifying Christ again.
 
 Hebrews 6 also provides reassurance to believers by highlighting God's unchanging nature and faithfulness in fulfilling His promises. It mentions the role of Jesus as the high priest and mediator between God and humanity, securing hope for those who put their trust in Him.
+
+##  [<u>Hebrews 7:1-28</u>]({{ site.url }}{% post_url bible-studies/Hebrews/2023-10-15-Hebrews-07-v01-28 %})
+
+Hebrews 7 focuses on the character and significance of Melchizedek, a mysterious figure from the Old Testament. The chapter highlights Melchizedek's unique traits, such as being a *"king of righteousness"* and a *"king of peace"* with no recorded genealogy. It emphasizes that even Abraham, the forefather of the Israelites, paid tithes to Melchizedek, indicating his superiority.
+
+The key point of Hebrews 7 is the superiority of the Melchizedekian priesthood over the Levitical priesthood. It explains that Jesus, as a high priest in the order of Melchizedek, surpasses the Levitical priests. This transition from the Levitical to the Melchizedekian priesthood signifies a change in the law, emphasizing the eternal and superior nature of Christ's priesthood.
+
+Overall, Hebrews 7 underscores the significance of Melchizedek and how Jesus fulfills the role of a superior and eternal high priest, bringing about a better covenant.
