--- a/_posts/bible-studies-Viet/2023-10-15-Hebrews.md
+++ b/_posts/bible-studies-Viet/2023-10-15-Hebrews.md
@@ -56,3 +56,7 @@ Hê-bơ-rơ 7 tập trung vào bản tính và ý nghĩa của Melchizedek, mộ
 Điểm quan trọng của Hê-bơ-rơ 7 là sự ưu việt của dòng Melchizedek so với  Levi. Nó giải thích rằng Đấng Christ, với tư cách là một thầy tế lễ thượng phẩm theo dòng Melchizedek, vượt trội hơn so với các thầy tế lễ dòng Levi. Sự chuyển đổi này từ dòng Levi sang dòng Melchizedek đánh dấu một sự thay đổi về luật pháp, nhấn mạnh tính vĩnh hằng và ưu việt của Đấng Christ.
 
 Tóm lại, Hê-bơ-rơ 7 làm nổi bật sự quan trọng của Melchizedek và cách Đấng Christ thực hiện vai trò của một thầy tế lễ cả vượt trội và vĩnh cửu, đem lại một giao ước tốt hơn.
+
+##  [<u>Hebrews 8:1-13</u>]({{ site.url }}{% post_url bible-studies-Viet/Hebrews/2023-10-15-Hebrews-08-v01-13-Viet %})
+
+Hebrews 8 bàn về sự ưu việt của giao ước mới được thiết lập bởi Đấng Christ so với giao ước cũ. Nó nhấn mạnh rằng Đấng Christ phục vụ trong vai trò thầy tế cả trên trời, mang lại một giao ước tốt hơn với những lời hứa tốt hơn. Giao ước mới này được đặc trưng bởi mối quan hệ trực tiếp với Đức Chúa Trời, vì luật pháp của Ngài được viết trên trái tim và tâm trí của những người tin. Khác với giao ước cũ, nó hứa hẹn sự tha thứ và sẽ không nhớ đến tội lỗi nữa. Chương này nhấn mạnh những khuyết điểm của giao ước cũ và kết luận rằng giao ước mới, qua Đấng Christ, mở một con đường mới ưu việt và vĩnh cửu để chúng ta được đến gần Chúa.
