--- a/_posts/bible-studies/2023-10-15-Hebrews.md
+++ b/_posts/bible-studies/2023-10-15-Hebrews.md
@@ -56,3 +56,7 @@ Hebrews 7 focuses on the character and significance of Melchizedek, a mysterious
 The key point of Hebrews 7 is the superiority of the Melchizedekian priesthood over the Levitical priesthood. It explains that Jesus, as a high priest in the order of Melchizedek, surpasses the Levitical priests. This transition from the Levitical to the Melchizedekian priesthood signifies a change in the law, emphasizing the eternal and superior nature of Christ's priesthood.
 
 Overall, Hebrews 7 underscores the significance of Melchizedek and how Jesus fulfills the role of a superior and eternal high priest, bringing about a better covenant.
+
+##  [<u>Hebrews 8:1-13</u>]({{ site.url }}{% post_url bible-studies/Hebrews/2023-10-15-Hebrews-08-v01-13 %})
+
+Hebrews 8 discusses the superiority of the new covenant established by Jesus compared to the old covenant. It emphasizes that Jesus serves as the high priest in the heavenly tabernacle, offering a better covenant with better promises. This new covenant is characterized by a direct relationship with God, as His laws are written on the hearts and minds of believers. Unlike the old covenant, it promises forgiveness and the remembrance of sins no more. The chapter highlights the flaws of the old covenant and concludes that the new covenant, through Jesus, provides a superior and everlasting way to draw near to God.
